# calmmage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LLM_RULES.md  Makefile  README.md  package-lock.json  pyproject.toml  theme.config.tsx
.claude/: settings.local.json
.claude/commands/: component_classes_scaffold.md  data_flow_diagram.md  new_idea.md  notes_search.md
ai/: demo_slides.html
ai/prompts/: contrarian.md  secretary.md
app/: layout.tsx  not-found.tsx  page.tsx
app/basic/: page.tsx
app/customized/: layout.tsx
calmlib/: README.md  pyproject.toml
calmlib/calmlib/: README.md  __init__.py  llm.py
calmlib/calmlib/beta/: __init__.py
calmlib/calmlib/beta/broken/: __init__.py  broken.py
calmlib/calmlib/extras/check_mode/: README.md  __init__.py  check_mode.py
calmlib/calmlib/tools/code_keeper/: README.md  __init__.py  core.py
calmlib/calmlib/tools/lib_discoverer/: __init__.py
calmlib/calmlib/utils/: README.md  __init__.py  audio_utils.py  main.py  read_write.py  run_utils.py  unsorted.py  whisper_utils.py
calmlib/calmlib/utils/langchain_utils/: fewshot_prompt_example.py
calmlib/calmlib/utils/llm_utils/: langchain_wrapper.py  litellm_wrapper.py
calmlib/calmlib/utils/logging_utils/: logging_utils.py  mar_2025.py  todo.md
calmlib/calmlib/utils/service_registry/: heartbeat.py  service_config.py
calmlib/dev/: dev_notes_rework_jul_2025.md  todo.md  todo_21_Feb.md
calmlib/dev/examples/: summary.md
calmlib/dev/paused/cli/: README.md
calmlib/dev/paused/setup/: .bash_profile  .bashrc  README.md  ipython_startup.py  setup.md
calmlib/dev/paused/startup_setup/: README.md  setup_startup.py  startup.py
calmlib/dev/projects/: __init__.py
calmlib/dev/unsorted/1/: datetime_utils.py
calmlib/dev/unsorted/2/: autocast.py
calmlib/dev/unsorted/3/: dropbox_utils.py  found_on_the_web.py
calmlib/dev/unsorted/tests/: test_autocast.py  test_read_write.py
calmlib/examples/e_archive/protobuf/: compile_proto.py  pb2_example.py
calmlib/examples/e_cli/e_argparse/: argparse_dict_example.py
calmlib/examples/e_dates/: todo.md
calmlib/examples/e_logging/: todo.md
calmlib/examples/e_misc/: check_mode_example.py
calmlib/examples/e_tempfiles/: README.md  touch_tempfile.py
calmlib/tests/extras/: test_check_mode.py
calmlib/tests/fixtures/code_garden/inbox/: code.keeper.garden.remind.py
calmlib/tests/tools/code_keeper/: test_code_keeper_gpt.py  test_parse_tagline.py
calmmage/dev_env/: __init__.py  dev_env.py  presets.py
calmmage/personal_website/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  theme.config.tsx
calmmage/prompt_templates/: README.md  export.sh
components/Icon/: index.tsx
config/: README.md  pyproject.toml
config/dev/: todo.md
config/nix/: README.md  flake.nix
dev/: dev.ipynb  todo_07_Jan.md  todo_26_jul.md
dev_env/tools/: dev_env_updater.py
experiments/season_1_winter_2024/: metadata.json  readme.md
experiments/season_2_spring_2025/: metadata.json
experiments/season_3_apr-may_2025/: metadata.json
experiments/season_4_jun_2025/: metadata.json
lib/: sections.ts
pages/: _meta.json
pages/calmmage_knowledge_base/: _meta.json  docs.md  todo.md
pages/example/: another.mdx
prompt_templates/: README.md  merged_prompts.md
prompt_templates/claude-code/: README.md  global claude protocol.md  global_CLAUDE.md  task-tracking.md
prompt_templates/components/: README.md  code_one-task-at-a-time.md  code_propose-ideas.md  code_python-personal-libs.md  task_tracking_markdown-formatting.md  think_akinator.md  think_brainstorm_categories.md  think_brainstorm_lists.md
prompt_templates/cursor/: rules.md
prompt_templates/inbox/: README.md  brainstorming_team_name.md  grok_coding_copilot_workalong.md
scripts/cronicle/: cronitor_ping.py
scripts/local_jobs/: 0_check_cronicle_status.py  0_check_docker_status.py  1_obsidian_auto_linking.py  1_obsidian_daily_cleanup.py  1_obsidian_file_type_sorting.py  1_obsidian_full_cleanup.py  1_obsidian_weekly_cleanup.py  1_uv_sync_all.py  2_obsidian_file_type_sorting.py  3_git_sync_all.py  9_ai_instructions_sync.py  _failing_job.py  _hello_world_job.py  check_docker_status.py  git_sync_all.py  git_sync_decision_flow.md  git_sync_design_notes.md  obsidian_auto_linking.py  obsidian_daily_cleanup.py  obsidian_file_type_sorting.py  obsidian_generic_cleanup.py  obsidian_weekly_cleanup.py  uv_sync_all.py
scripts/scheduled_jobs/: obsidian_sort.py
scripts/scheduled_tasks/: _interactive_job.py  _system_stats_job.py  system_stats_job.py
scripts/setup/: bootstrap-dev-env.sh
seasonal/season_1_dec-jan_2024/: metadata.json
seasonal/season_1_dec-jan_2024/unsorted/dev-aws-s3/: config.py  main.py  pyproject.toml  s3_client.py  s3_operations.py
seasonal/season_1_dec-jan_2024/unsorted/dev-aws-s3/tests/: test_s3_operations.py
seasonal/season_1_dec_2024/: metadata.json
seasonal/season_2_feb-mar_2025/: metadata.json
seasonal/season_2_feb_2025/: metadata.json
seasonal/season_3_apr-may_2025/: metadata.json
seasonal/season_3_apr_2025/: Consider and Discuss moving to US.md  Realistic AI chat bot.md  metadata.json
seasonal/season_4_jun_2025/: metadata.json
site/: .dockerignore
site/app/: page.tsx
src/calmlib/: pyproject.toml
src/lib/: utils.py
tests/: test_coding_projects.py
tools/: dev_env_updater.py  todo.md
tools/ai_character_launcher/: launcher.sh
tools/ai_instructions_composer/: Makefile  cli.py  dev_notes.md
tools/ai_instructions_tool/: Makefile  cli.py
tools/archive/: dev_env_updater.py
tools/count_repos/: Makefile  repo_stats.py
tools/cronicle_scheduler/: Makefile
tools/env_setup_script/: idea.md
tools/git_sync_tool/: Makefile  __init__.py  cli.py  git_sync.py
tools/local_job_runner/: Makefile  README.md  cli.py  job_runner.py
tools/mac_settings/: Makefile  tool.py
tools/obsidian_sorter/: Makefile  __init__.py  add_note_types.py  config.py  (+5 more)
ui/: global-nav.tsx  sidebar.tsx
web/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
web-old/: tailwind.config.ts
website/: Dockerfile
(+895 files in other folders)
