[tool.poetry]
name = "calmmage"
version = "2025.1.4" # bugfix open-dir
description = "Personal GitHub repo for tools, projects, and personal website"
authors = ["Reliable Magician <petrlavrov@calmmage.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Node.js",
    "Programming Language :: TypeScript",
    "Programming Language :: Nest.js",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages=[
    { include = "seasonal", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
#pytest = "*"
typer = {version = ">=0.9.0", extras = ["all"]}
#typer-cli = {version = ">=0.0.13", extras = ["all"]}
#toml = "*"
#pytz = "*"
tqdm = "*"
#mongoengine = "*"
loguru = "*"
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main"}
botspot = { git = "https://github.com/calmmage/botspot.git", branch = "main"}
# defaultenv = { git = "https://github.com/bobuk/defaultenv.git", branch ="master", optional = true }
# bmmb = { git = "https://github.com/calmmage/bot_me_maybe.git", branch ="main", optional = true }
#gpt_kit = { git = "https://github.com/calmmage/gpt_kit.git", branch = "main", optional = true }
PyGithub = "*"
python-dotenv = "*"
gitpython = "*"
#assemblyai = "*"
#whisperx = { git = "https://github.com/m-bain/whisperX.git", branch = "main" }
#PyDrive = "*"
pillow = "^10.3.0"
pytimeparse = "^1.1.8"
telethon = "^1.38.1"
pymongo = ">=4.9"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
boto3 = "^1.35.90"
deprecated = "^1.2.15"
motor = "^3.6.1"
langchain = "^0.3.14"
langchain-anthropic = "^0.3.3"
langchain-openai = "^0.3.0"
langchain-google-genai = "^2.0.9"
langchain-ollama = "^0.2.2"
langchain-community = "^0.3.14"
pandas = "^2.2.3"
qrcode = "^8.0"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"
jupyter = ">=1.0.0"
#pandas = ">=1.0.0"
pytest = "*"
#pytest-mongodb = "*"
black = ">=24"
pre-commit = "*"
jupyter_contrib_nbextensions = "*"
#easydict = ">=1.10"
fastapi = "*"
fastui = "*"
#pyperclip = "*"
#pytest = "*"
#tqdm = "*"
#matplotlib = "*"
#numpy = "*"
#pandas = "*"
#seaborn = "*"
#ipykernel = "*"
#ipywidgets = "*"
#joblib = "*"
#retry = "*"
#pyperclip = "*"
#paramiko = "*"
#scp = "*"
#pymorphy2 = "*"
#langchain = "*"
numpy = "*"
plotly = "*"
pandas = "^2.2.3"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.161.0"
requests = "^2.32.3"
google-auth-httplib2 = "^0.2.0"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.26.0"

[tool.poetry.extras]
full = ["dropbox", "protobuf", "pandas", "seaborn", "defaultenv", "bmmb",
    "gpt_kit", "httpx", "pydantic", "bokeh", "click", "fastapi", "nltk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = "https://github.com/calmmage/calmmage"
