[tool.poetry]
name = "dev-aws-s3"
version = "0.1.0"
description = "AWS S3 operations demo"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.29"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 